[gd_scene load_steps=16 format=3 uid="uid://ds5twxhi7yq7j"]

[ext_resource type="Script" path="res://scenes/levels/base_level.gd" id="1_3y0r6"]
[ext_resource type="PackedScene" uid="uid://bh68ke5pd617u" path="res://scenes/entities/characters/player/character_body_2d.tscn" id="2_qdxsp"]
[ext_resource type="PackedScene" uid="uid://c7dcnp2hndaih" path="res://scenes/common/win_zone.tscn" id="2_yau4l"]
[ext_resource type="PackedScene" uid="uid://dhikxsmxr43ju" path="res://scenes/common/ResultsScreen.tscn" id="3_abmcm"]
[ext_resource type="PackedScene" uid="uid://coopu6svniep4" path="res://scenes/common/touch_controls.tscn" id="4_iqqkr"]
[ext_resource type="AudioStream" uid="uid://chlohcx8g3x82" path="res://assets/audio/sounds/countdown.wav" id="6_3dscg"]
[ext_resource type="AudioStream" uid="uid://dgsuqakvss1gw" path="res://assets/audio/sounds/start.wav" id="7_6fkqq"]
[ext_resource type="PackedScene" uid="uid://dg7278bc2g4bx" path="res://scenes/common/admin_controls.tscn" id="8_nyb32"]
[ext_resource type="Texture2D" uid="uid://dlq2vmodo4bso" path="res://assets/level/backgrounds/set4_background.png" id="9_ecrt5"]
[ext_resource type="Texture2D" uid="uid://cv4mt05x7uqw6" path="res://assets/level/backgrounds/set4_tiles.png" id="10_35o38"]
[ext_resource type="Texture2D" uid="uid://dfu64wyf45p8p" path="res://assets/level/backgrounds/set4_hills.png" id="11_mpwqk"]

[sub_resource type="LabelSettings" id="LabelSettings_ynypi"]
font_size = 24
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1qgim"]
font_size = 90
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1i8xa"]
font_size = 32
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_16w4h"]

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_3y0r6")
player_scene = ExtResource("2_qdxsp")
admin_controls_scene = ExtResource("8_nyb32")
touch_controls_scene = ExtResource("4_iqqkr")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -5304.0
offset_top = -3429.0
offset_right = 15870.0
offset_bottom = 10666.0
color = Color(0.172549, 0.768627, 0.858824, 1)

[node name="Timer" type="Timer" parent="."]

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_ynypi")

[node name="Leaderboard" parent="UI" instance=ExtResource("3_abmcm")]

[node name="CountdownLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_1qgim")

[node name="CountdownAudio" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource("6_3dscg")

[node name="StartAudio" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource("7_6fkqq")

[node name="LevelLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 71.0
offset_right = 20.0
offset_bottom = 94.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_1i8xa")
metadata/_edit_use_anchors_ = true

[node name="BottomWorldBorder" type="Area2D" parent="."]
position = Vector2(0, 2000)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWorldBorder"]
shape = SubResource("WorldBoundaryShape2D_16w4h")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Background" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Background"]
position = Vector2(957, 721)
scale = Vector2(3, 3)
texture = ExtResource("9_ecrt5")

[node name="Tiles" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Tiles"]
scale = Vector2(3, 3)
texture = ExtResource("10_35o38")
centered = false

[node name="Hills" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/Hills"]
scale = Vector2(3, 3)
texture = ExtResource("11_mpwqk")
centered = false

[node name="WinZone" parent="." instance=ExtResource("2_yau4l")]

[connection signal="body_entered" from="BottomWorldBorder" to="." method="_on_bottom_world_border_body_entered"]
[connection signal="win" from="WinZone" to="." method="_on_win_zone_win"]
